Modi: fixing left/right alignment issue for the three/two cards layout

--- a/css/style.css
+++ b/css/style.css
@@ -934,6 +934,18 @@ span.file div.file-type-size {
   padding-top: 30px;
   padding-bottom: 30px;
 }
+.paragraph--type--three-column-cards.desktop .cards-columns-container .cards-column-1 {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+.paragraph--type--three-column-cards.desktop .cards-columns-container .cards-column-2 {
+  padding-left: 16px;
+  padding-right: 16px;
+}
+.paragraph--type--three-column-cards.desktop .cards-columns-container .cards-column-3 {
+  padding-left: 0px;
+  padding-right: 0px;
+}
 .paragraph--type--three-column-cards.desktop .cards-columns-container .cards-column .card {
   border-radius: 3px;
   border: none;
@@ -1049,6 +1061,14 @@ span.file div.file-type-size {
 .paragraph--type--two-column-cards.desktop .cards-columns-container {
   padding-top: 30px;
   padding-bottom: 30px;
+}
+.paragraph--type--two-column-cards.desktop .cards-columns-container .cards-column-1 {
+  padding-left: 0px;
+  padding-right: 8px;
+}
+.paragraph--type--two-column-cards.desktop .cards-columns-container .cards-column-2 {
+  padding-left: 8px;
+  padding-right: 0px;
 }
 .paragraph--type--two-column-cards.desktop .cards-columns-container .cards-column .card {
   border-radius: 3px;
@@ -1174,7 +1194,6 @@ span.file div.file-type-size {
   left: 50%;
   transform: translate(-50%, 20%);
   border-radius: 3px;
-  /* 	border: 1px solid #E0E0E0; */
   box-shadow: 0 0px 20px 0 rgba(0, 0, 0, 0.1);
   color: #37393D;
   font-size: 12px;
