--- a/scss/paragraph-three-card.scss
+++ b/scss/paragraph-three-card.scss
@@ -21,6 +21,9 @@
     .cards-columns-container{
         padding-top:    30px;
         padding-bottom: 30px;
+        .cards-column-1 { padding-left:  0px; padding-right:  0px; }
+        .cards-column-2 { padding-left: 16px; padding-right: 16px; }
+        .cards-column-3 { padding-left:  0px; padding-right:  0px; }
         .cards-column .card {
             border-radius: 3px;
             border: none;
